# mangos-tbc

./: .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: docker-image.yml
contrib/extractor_scripts/: ExtractResources.sh
dep/: CMakeLists.txt
dep/lua/: CMakeLists.txt
dep/sol/: CMakeLists.txt
dep/src/: CMakeLists.txt
dep/src/lua/: CMakeLists.txt
docker/: Dockerfile  entrypoint.sh
src/Playerbot/: Playerbot.sln  docker-compose.yml
src/Playerbot/Playerbot.Core/Abstractions/: IPlayerbotRepository.cs
src/Playerbot/Playerbot.Core/Contexts/: PlayerbotContext.cs
src/Playerbot/Playerbot.Core/Models/: PlayerbotScript.cs  PlayerbotScriptsDto.cs  PlayerbotToken.cs
src/Playerbot/Playerbot.Core/Services/: PlayerbotRepository.cs
src/Playerbot/Playerbot.Web/: Dockerfile  Playerbot.Web.csproj  Program.cs  _Imports.razor  docker-compose.yml
src/Playerbot/Playerbot.Web/Abstractions/: IRemoteEditSessionManager.cs
src/Playerbot/Playerbot.Web/Models/: RemoteEditSession.cs
src/Playerbot/Playerbot.Web/Pages/: Error.cshtml  Error.cshtml.cs  FetchData.razor  Index.razor  _Host.cshtml  _Layout.cshtml
src/Playerbot/Playerbot.Web/Properties/: launchSettings.json
src/Playerbot/Playerbot.Web/Services/: RemoteEditSessionManager.cs
src/Playerbot/Playerbot.Web/Shared/: MainLayout.razor
src/Playerbot/api/: Playerbot.Api.sln  Program.cs
src/Playerbot/api/Abstractions/: IPlayerbotRepository.cs
src/Playerbot/client/: playerbot.py  scripts.py  watch.py
src/PlayerbotWeb/: PlayerbotWeb.sln
src/PlayerbotWeb/PlayerbotWeb/: Dockerfile  PlayerbotWeb.csproj  Program.cs  _Imports.razor  docker-compose.yml
src/game/: CMakeLists.txt
src/game/Chat/: Chat.h
src/game/Entities/: CharacterHandler.cpp  Player.cpp  Player.h
src/game/Groups/: Group.cpp  Group.h
src/game/MotionGenerators/: MotionMaster.cpp  MotionMaster.h
src/game/Server/: WorldSession.h
src/game/lua/: CMakeLists.txt
src/mangosd/: Main.cpp
src/playerbot/: mosquitto.conf
src/playerbot/api/: Dockerfile  Playerbot.Api.csproj
(+23 files in other folders)
